using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimatorParameterNames
{
    public static string PLAYER_IN_RADIUS_BOOL = "IsPlayerInRadius";
    public static string IS_HIRED_BOOL_NAME = "IsHired";
    public static string IS_FLEEING_BOOL_NAME = "IsFleeing";
}
